apps/qbittorrent/kustomization/cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: qbittorrent-ingress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: qbittorrent
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: traefik
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: homepage
        app.kubernetes.io/name: homepage
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: media-video
        app.kubernetes.io/name: radarr
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: media-video
        app.kubernetes.io/name: sonarr
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: qbittorrent-egress
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: qbittorrent
  egress:
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
      rules:
        dns:
        - matchPattern: "*"
  - toEntities:
    - world
    toPorts:
    - ports:
      - port: "1"
        endPort: 65535
        protocol: TCP
      - port: "1"
        endPort: 65535
        protocol: UDP
